--- a/app/static/style.css
+++ b/app/static/style.css
@@ -97,6 +97,6 @@ img {
 .result-text {
     font-size: 15px;
     font-weight: regular;
-    color: #007bff; /* Pink color */
+    color: #ff4800; /* Pink color */
     margin-top: 15px;
 }
